# llm-by-zero

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  start_backend.sh  train_and_evaluate.sh
app/: main.py
app/controller/: llm_controller.py
app/core/: config.py  logging.py
app/db/: session.py
app/db/models/: llm_model.py
app/db/schemas/: llm_schema.py
app/helpers/: __init__.py  model_trainer.py  transformer_model.py
app/service/: inference_service.py  llm_service.py  training_service.py
data/: sample.txt
migrations/: env.py
migrations/versions/: 001_initial_setup.py  002_rename_model_path_to_artifact_path.py  003_add_max_samples.py
test/integration/: test_pipeline.py
test/unit/: test_model.py
