[project]
name = "llm-by-zero"
version = "0.1.0"
description = "A microservice for training and managing LLM models from scratch"
authors = [
    {name = "Alvaro Brito", email = "your.email@example.com"}
]
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "tiktoken>=0.5.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.1",
    "minio>=7.2.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.4.2",
    "pydantic-settings>=2.1.0",
    "numpy>=1.24.0,<2.0.0",
    "tqdm>=4.66.1",
    "requests>=2.31.0",
    "alembic>=1.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.pyright]
include = ["app"]
exclude = ["**/__pycache__"]
pythonVersion = "3.10"
pythonPlatform = "All"

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["__pycache__"] 